# llm-from-scratch

./: .gitignore  README.md  frankenlex_bootstrap.py  generate.py  llm.py  pyproject.toml  setup.py  train.py
.github/workflows/: ci.yml
docs/: architecture.md  training_report.md
runs/frankenstein-cpu/: metrics.json
runs/frankenstein-cuda/: metrics.json
runs/frankenstein-showcase/: metrics.json
runs/frankenstein-word/: metrics.json
src/frankengpt/: __init__.py  cli.py  config.py  data.py  model.py  pretrained.py  tokenizer.py  training.py
tests/: conftest.py  test_checkpoint_and_generation.py  test_cli.py  test_data.py  test_inference.py  test_llm.py  test_model.py  test_tokenizer.py  test_training.py
