[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-from-scratch"
version = "0.2.0"
description = "A compact, trainable GPT-style language model implemented from first principles"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2",
  "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools]
py-modules = ["llm"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
