[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "frankengpt"
version = "0.1.0"
description = "A small, trainable GPT-style language model built from scratch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch>=2.1"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]
showcase = ["transformers>=4.40"]

[project.scripts]
frankengpt = "frankengpt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
